--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Rubik:400,500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="../node_modules/@fortawesome/fontawesome-free/css/all.css"
+      rel="stylesheet"
+    />
     <title>HolidayPirates Frontend test</title>
   </head>
   <body>
-    <div class="filter-wrapper">
+    <form class="filter-wrapper">
       <div class="filter">
         <div class="price-range">
           <label for="min-price">Min</label>
@@ -22,11 +30,11 @@
             type="number"
             name="max"
             id="max-price"
-            placeholder="100"
+            placeholder="1000"
           />
         </div>
         <div class="star-dropdown">
-          <label for="filter-by-stars">Filter by stars</label>
+          <label for="filter-by-stars">Filter by stars </label>
           <select
             class="filter-by-stars"
             name="select-stars"
@@ -35,7 +43,7 @@
             <option value="all">All</option>
             <option value="1">1</option>
             <option value="2">2</option>
-            <option value="3">3</option>
+            <option value="3" selected>3</option>
             <option value="4">4</option>
             <option value="5">5</option>
           </select>
@@ -45,8 +53,9 @@
             class="filter-button"
             type="submit"
             name="filter-button"
-            id="reset-filters"
+            id="submit-filters"
           >
+            <i class="fa fa-filter"></i>
             Filter
           </button>
           <button
@@ -55,108 +64,12 @@
             name="reset"
             id="reset-filters"
           >
+            <i class="fa fa-redo"></i>
             Reset
           </button>
         </div>
       </div>
-    </div>
-    <div class="results">
-      <div class="card-wrapper">
-        <div class="card-image">
-          <img class="image" src="../assets/hotel1.jpeg" />
-        </div>
-        <div class="card-body">
-          <div class="first-level-info">
-            Hotel Name
-          </div>
-          <div class="second-level-info">
-            <div class="stars">5 Stars</div>
-            <div class="location">Berlin, Germany</div>
-          </div>
-
-          <div class="third-level-info">
-            <div class="cost">
-              $78
-              <span class="per-night">/ night</span>
-            </div>
-            <div class="review">
-              <a href="">Reviews</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="card-wrapper">
-        <div class="card-image">
-          <img class="image" src="../assets/hotel1.jpeg" />
-        </div>
-        <div class="card-body">
-          <div class="first-level-info">
-            Hotel Name
-          </div>
-          <div class="second-level-info">
-            <div class="stars">5 Stars</div>
-            <div class="location">Berlin, Germany</div>
-          </div>
-
-          <div class="third-level-info">
-            <div class="cost">
-              $78
-              <span class="per-night">/ night</span>
-            </div>
-            <div class="review">
-              <a href="">Reviews</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="card-wrapper">
-        <div class="card-image">
-          <img class="image" src="../assets/hotel1.jpeg" />
-        </div>
-        <div class="card-body">
-          <div class="first-level-info">
-            Hotel Name
-          </div>
-          <div class="second-level-info">
-            <div class="stars">5 Stars</div>
-            <div class="location">Berlin, Germany</div>
-          </div>
-
-          <div class="third-level-info">
-            <div class="cost">
-              $78
-              <span class="per-night">/ night</span>
-            </div>
-            <div class="review">
-              <a href="">Reviews</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="card-wrapper">
-        <div class="card-image">
-          <img class="image" src="../assets/hotel1.jpeg" />
-        </div>
-        <div class="card-body">
-          <div class="first-level-info">
-            Hotel Name
-          </div>
-          <div class="second-level-info">
-            <div class="stars">5 Stars</div>
-            <div class="location">Berlin, Germany</div>
-          </div>
-
-          <div class="third-level-info">
-            <div class="cost">
-              $78
-              <span class="per-night">/ night</span>
-            </div>
-            <div class="review">
-              <a href="">Reviews</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    </form>
+    <div class="results"></div>
   </body>
 </html>
