Add tests, code refactoring

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
             <option value="5">5</option>
           </select>
         </div>
-        <div class="filter-buttons">
+        <div class="filter-buttons-wrapper">
           <button
             class="filter-button"
             type="submit"
